--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,6 @@
 tasks:
   - init: |
+      git clone https://github.com/jenkinsci/jenkins.git && cd jenkins && |
       mvn -am -pl war,bom -P quick-build clean install
     command: |      
       mvn -pl war jetty:run -Dhost=0.0.0.0
