--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,7 @@
 tasks:
   - init: |
-      git clone https://github.com/jenkinsci/jenkins.git && cd jenkins && |
+      git clone https://github.com/jenkinsci/jenkins.git
+      cd jenkins
       mvn -am -pl war,bom -P quick-build clean install
     command: |      
       mvn -pl war jetty:run -Dhost=0.0.0.0
