Added recommended extensions.

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -24,6 +24,11 @@ jetbrains:
 vscode:
   extensions:
     - vscjava.vscode-java-pack
+    - redhat.java
+    - vscjava.vscode-java-debug
+    - vscjava.vscode-java-dependency
+    - vscjava.vscode-java-test
+    - vscjava.vscode-maven
 
 image:
   file: .gitpod/Dockerfile
