--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,13 +1,8 @@
 tasks:
   - init: |
-      git clone https://github.com/jenkinsci/jenkins.git
-      cd jenkins
-      mvn -am -pl war,bom -P quick-build clean install
-    command: |      
-      mvn -pl war jetty:run -Dhost=0.0.0.0
-    name: Run
-  - command: gp ports await 8080 && gp url 8080 && gp preview $(gp url 8080)/jenkins/
-    name: Preview
+      cd .gitpod && docker-compose pull
+  - command: |
+      cd .gitpod && docker-compose up
 
 github:
   prebuilds:
