--- a/.gitpod/docker-compose.yml
+++ b/.gitpod/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   jenkins:
-    image: jenkins/jenkins:lts
+    build: .
     privileged: true
     user: root
     ports:
