--- a/.gitpod/Dockerfile
+++ b/.gitpod/Dockerfile
@@ -1,3 +1,3 @@
 FROM jenkins/jenkins:lts-jdk11
 
-RUN jenkins-plugin-cli --plugins pipeline-model-definition github-branch-source:1.8
+# RUN jenkins-plugin-cli --plugins pipeline-model-definition github-branch-source:1.8
