--- a/.gitpod/Dockerfile
+++ b/.gitpod/Dockerfile
@@ -1,5 +1,3 @@
 FROM jenkins/jenkins:lts-jdk11
 
-# RUN jenkins-plugin-cli --plugins pipeline-model-definition github-branch-source:1.8
-RUN mkdir -p /sys/fs/cgroup/systemd && \
-    mount -t cgroup -o none,name=systemd cgroup /sys/fs/cgroup/systemd
+RUN jenkins-plugin-cli --plugins configuration-as-code:1464.vd8507b_82e41a_
