--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,8 @@
 # https://www.gitpod.io/docs/config-gitpod-file
 
 tasks:
-  - init: cd .gitpod && docker-compose pull
-  - command: cd .gitpod && docker-compose up
+  - init: docker-compose pull
+  - command: docker-compose up
 
 github:
   # https://www.gitpod.io/docs/prebuilds/#configure-prebuilds
